# fordscrape

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
src/fordscrape/: __main__.py  latlongs.py  state.py  zipcodes.py
src/fordscrape/data/: 2020-us-zcta520-centers.csv
tests/main/: test_init.py  test_invocation.py
tests/state/: test_initialize.py
