[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 64",
  "setuptools_scm >= 6.4"
]

[project]
dependencies = ["apsw>=3.44.0"]
dynamic = ["version"]
name = "fordscrape"
requires-python = ">= 3.11"

[project.scripts]
fordscrape = "fordscrape.__main__:main"

[tool.flake8]
ignore = ["E203", "W503"]
max-line-length = 88

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.setuptools_scm]
